# batch_summary_doubleword

./: .env.sample  .gitignore  LICENSE  README.md  create_batch.py  create_batch_requests_robust.py  poll_and_download.py  process_results.py  pyproject.toml  requirements.txt  run_batch_pipeline.py  submit_batch.py  summarisation_prompt_sample.txt
data/summaries/: 0001__IFoA_DSSCC_Part_1_Green_Bonds__5BNov_2023_5D_summary_20260125_150113.md  DGM_summary_20260125_150113.md  IFoA_WP_DSSCC_-_Green_Bonds_Paper_2__5BAugust_2024_5D_summary_20260125_150113.md  actuaries-using-data-science-and-artificial-intelligenc_summary_20260125_150113.md  actuary-gpt-applications-of-large-language-models-to-in_summary_20260125_150113.md  primer-generative-ai_summary_20260125_150113.md
data/summaries_235B_old/: AI,_data_science_and_emerging_technologies_summary_20260125_143906.md  IFoA_WP_DSSCC_-_Green_Bonds_Paper_2__5BAugust_2024_5D_summary_20260125_143906.md  Key_findings_from_the_data_science_thematic_review_summary_20260125_143906.md  actuaries-using-data-science-and-artificial-intelligenc_summary_20260125_143906.md  actuary-gpt-applications-of-large-language-models-to-in_summary_20260125_143906.md  ifoa-response-to-treasury-select-committee-consultation_summary_20260125_143906.md
data/summaries_235B_samples/: 0001__IFoA_DSSCC_Part_1_Green_Bonds__5BNov_2023_5D_summary_20260125_143906.md  DGM_summary_20260125_143906.md  Modular_Framework_of_Machine_Learning_Pipeline__281_29_summary_20260125_143906.md  evolution-of-economic-scenario-generators-a-report-by-t_summary_20260125_143906.md  (+1 more)
(+5 files in other folders)
